--- a/Three_js/src/style.css
+++ b/Three_js/src/style.css
@@ -10,7 +10,7 @@ body {
 
 body {
   overflow: hidden;
-  background-color: hsl(230, 60%, 10%);
+  background-color: rgb(15, 21, 41);
 }
 
 .webgl {
